[package]
name = "resonant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = "1"
serde_json = "1"
tokio = { version = "1.29", features = ["full"] }
sqlx = { version = "0.6.1", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "uuid",
] }
dotenvy = "0.15"

solana-sdk = "1.17.1"
solana-client = "1.17.1"
solana-transaction-status = "1.17.1"
solana-program = "1.17.1"
futures = "0.3.28"
